--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -127,11 +127,11 @@
         p.actividad {
             color: rgb(175, 17, 167);
             margin: 12px 0;
-            font-size:$font-parrafos ;
+            font-size:30px ;
             text-transform: uppercase;
         }
         p {
-            font-size: 30px;
+            font-size: 20px;
 
         }
 
@@ -285,5 +285,8 @@ textarea {
 
     .nosotros-info {
         width: auto;
+    }
+    .promos-sep{
+        flex-direction: row;
     }
 }
