--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -21,7 +21,10 @@
     font-size: 15px;
     align-items: center;
 }
-
+.promos-sep{
+    display: flex;
+    flex-direction: row;
+}
 .imagenes-promo {
     width: 200px;
     height: 200px;
@@ -95,7 +98,7 @@
 }
 
 .pa-nos {
-    font-size: $font-parrafos;
+    font-size: 20px;
     
 }
 
@@ -120,21 +123,17 @@
 
         h3 {
             color: violet;
-            font-size: 30px;
+            font-size: 18px;
             margin-top: 120px;
         }
 
         p.actividad {
             color: rgb(175, 17, 167);
             margin: 12px 0;
-            font-size:30px ;
+            font-size:15px ;
             text-transform: uppercase;
         }
-        p {
-            font-size: 20px;
-
-        }
-
+    }
         .miembro-img {
             position: absolute;
             top: -50px;
@@ -150,7 +149,7 @@
             }
         }
     }
-}
+
 
 #about {
     margin-bottom: 2px;
@@ -287,6 +286,7 @@ textarea {
         width: auto;
     }
     .promos-sep{
-        flex-direction: row;
+        flex-direction: column;
     }
 }
+
